syntax = "proto3";
option csharp_namespace = "Elsa.ProtoActor.ProtoBuf";
package Elsa.ProtoActor.ProtoBuf;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "Shared.proto";

message ProtoExecuteWorkflowRequest{
  string WorkflowDefinitionVersionId = 1;
  optional string CorrelationId = 3;
  optional string BookmarkId = 4;
  optional ProtoActivityHandle ActivityHandle = 5;
  optional ProtoInput input = 6;
  optional ProtoProperties properties = 7;
  optional string TriggerActivityId = 8;
  optional string ParentWorkflowInstanceId = 9;
}

message ProtoExecuteWorkflowResponse {
  string WorkflowInstanceId = 1;
  ProtoWorkflowStatus Status = 3;
  ProtoWorkflowSubStatus SubStatus = 4;
  ProtoBookmarkDiff BookmarkDiff = 5;
  repeated ProtoActivityIncident Incidents = 6;
}

message ProtoBookmarkDiff {
  repeated ProtoBookmarkInfo Added = 1;
  repeated ProtoBookmarkInfo Removed = 2;
  repeated ProtoBookmarkInfo Unchanged = 3;
}

message ProtoBookmarkInfo {
  string Id = 1;
  string Name = 2;
  string Hash = 3;
}