syntax = "proto3";
option csharp_namespace = "Elsa.ProtoActor.ProtoBuf";
package Elsa.ProtoActor.ProtoBuf;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "Shared.proto";
import "Workflow.Messages.proto";

service Workflow {
  rpc ExecuteAndWait (ProtoExecuteWorkflowRequest) returns (ProtoExecuteWorkflowResponse);
  rpc ExecuteAndForget (ProtoExecuteWorkflowRequest) returns (Empty);
  rpc Stop (Empty) returns (Empty);
  rpc Cancel (Empty) returns (Empty);
  rpc ExportState(ProtoExportWorkflowStateRequest) returns (ProtoExportWorkflowStateResponse);
  rpc ImportState(ProtoImportWorkflowStateRequest) returns (ProtoImportWorkflowStateResponse);
}